@@ -1,0 +1,1 @@
+DIST swarp-2.38.0.tar.gz 2063462 SHA256 f54a637f6c17ef2d94f767da641afea9bec726c31501cb828d9b948b1507c7c4 SHA512 80f4ade59738df3d4c9b47bda04148b53c6ba995d523fa8d1e02fb5d952b6078a53cc7d273849a033505de127a4f318b95adf2bf5a2dc38e8cc9bdaf5658487a WHIRLPOOL e328be5011ac0a89858ce7420d57715f2a178012b81f649953f63bbac6ae5a75c86905c01f58c4bc0a2149b41291e3092e40dbfd302667a1fcb7b2aa9688ac40
