@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-astronomy/swarp/ChangeLog,v 1.6 2011/08/04 18:33:44 bicatali Exp $
 
+*swarp-2.38.0 (21 Mar 2014)
+
+  21 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> +swarp-2.38.0.ebuild,
+  swarp-9999.ebuild:
+  sci-astronomy/swarp: Add new version linked to live one
+
   27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> swarp-9999.ebuild:
   sci-astronomy/swarp: EAPI-5, autotools-utils
 
